etc/k8s/bitcoin-hooks-staging/workers.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker-scheduled-processing
  namespace: bitcoin-hooks-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: zapgo/bitcoin-hooks:0.002
        imagePullPolicy: IfNotPresent
        name: bitcoin-hooks
        ports:
        - containerPort: 8000
        command: ['/bin/sh','-c', 'celery -A config.celery worker --loglevel=INFO --concurrency=1 -Q scheduled-processing-bitcoin-kube-staging']
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker-notify-new-txs
  namespace: bitcoin-hooks-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: zapgo/bitcoin-hooks:0.002
        imagePullPolicy: IfNotPresent
        name: bitcoin-hooks
        ports:
        - containerPort: 8000
        command: ['/bin/sh','-c', 'celery -A config.celery worker --loglevel=INFO --concurrency=1 -Q notify-new-txs-bitcoin-kube-staging']
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker-notify-confirmations
  namespace: bitcoin-hooks-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: zapgo/bitcoin-hooks:0.002
        imagePullPolicy: IfNotPresent
        name: bitcoin-hooks
        ports:
        - containerPort: 8000
        command: ['/bin/sh','-c', 'celery -A config.celery worker --loglevel=INFO --concurrency=1 -Q notify-confirmations-bitcoin-kube-staging']
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker-send-webhooks
  namespace: bitcoin-hooks-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: zapgo/bitcoin-hooks:0.002
        imagePullPolicy: IfNotPresent
        name: bitcoin-hooks
        ports:
        - containerPort: 8000
        command: ['/bin/sh','-c', 'celery -A config.celery worker --loglevel=INFO --concurrency=1 -Q send-webhooks-bitcoin-kube-staging']
